changes to categories